Changelog
=========

0.3.0 (unreleased)
------------------

* added a video object id (for usability reason)
  [keul]
* if the YouTube URL contains the ``autoplay=1`` parameter
  or if the RedTurtle video contents is called with the same
  param, autoplay on video will be enabled
  [keul] 

0.2.0 (2012-09-04)
------------------

* Fixed egg dependency only to ``redturtle.video``
  [keul]
* add getThumb method to return a default thumbnail image to redturtle.video on
  IRemoteVideo creation. This is a new feature of redturtle.video 0.8 and up.
  [lucabel]
* Add a new div around object tag in video template, new param and transparency.
  So you can be able to set correctly a z-index on this div and solve overlap
  problem with other elements on Internet Explorer.
  [lucabel]

0.1.0 (2011-05-12)
------------------

* Initial release (moved out from ``redturtle.video``)
* Support new ``youtu.be`` URLs
