@@ -1,26 +1,0 @@
-<div class="youtubeEmbedWrapper">
-<script type="text/javascript" tal:condition="view/check_autofocus">
-<!--
-function onYouTubePlayerReady() {
-    document.getElementById('youtubeVideo').focus();
-}
-//-->       
-</script>
-<object width="425" height="344" id="youtubeVideo"
-        tal:attributes="width view/getWidth;
-                        height view/getHeight;
-                        tabindex python:view.check_autofocus() and '1' or None;
-                        ">
-  <param name="movie" value=""
-         tal:attributes="value view/getVideoLink" />
-  <param name="allowFullScreen" value="true"/>
-  <param name="allowScriptAccess" value="always"/>
-  <param name="wmode" value="transparent">
-  <embed src="" tal:attributes="src view/getVideoLink;
-                                width view/getWidth;
-                                height view/getHeight;
-                                tabindex python:view.check_autofocus() and '1' or None;"
-      type="application/x-shockwave-flash" allowScriptAccess="always" allowfullscreen="true"
-	  wmode="transparent" width="425" height="344"></embed>
-</object>
-</div>
