@@ -40,8 +40,9 @@ class YoutubeBase(object):
         """If the autoplay parameter is in the URL, return True (for enabling autofocus)"""
         return self.request.QUERY_STRING.lower().find('autoplay=1')>-1
 
+
 class ClassicYoutubeEmbedCode(YoutubeBase, VideoEmbedCode):
-    """ ClassicYoutubeEmbedCode
+    """ClassicYoutubeEmbedCode
     Provides a way to have a html code to embed Youtube video in a web page
 
     >>> from zope.interface import implements
@@ -49,6 +50,8 @@ class ClassicYoutubeEmbedCode(YoutubeBase, VideoEmbedCode):
     >>> from redturtle.video.interfaces import IVideoEmbedCode
     >>> from zope.component import getMultiAdapter
     >>> from collective.rtvideo.youtube.tests.base import TestRequest
+    
+    >>> request = TestRequest()
 
     >>> class RemoteVideo(object):
     ...     implements(IRTRemoteVideo)
@@ -62,7 +65,7 @@ class ClassicYoutubeEmbedCode(YoutubeBase, VideoEmbedCode):
     ...         return self.size['height']
 
     >>> remotevideo = RemoteVideo()
-    >>> adapter = getMultiAdapter((remotevideo, TestRequest()),
+    >>> adapter = getMultiAdapter((remotevideo, request),
     ...                                         IVideoEmbedCode,
     ...                                         name = 'youtube.com')
     >>> adapter.getVideoLink()
@@ -81,8 +84,46 @@ class ClassicYoutubeEmbedCode(YoutubeBase, VideoEmbedCode):
     </div>
     <BLANKLINE>
 
+    Now check if the autoplay parameter is taken used when putted into the video source URL.
+
+    >>> remotevideo.remoteUrl += '?AUTOPLAY=1'
+    >>> print adapter()
+    <div class="youtubeEmbedWrapper">
+    <object width="425" height="349" id="youtubeVideo">
+      <param name="movie" value="http://www.youtube.com/v/s43WGi_QZEE?autoplay=1&amp;enablejsapi=1" />
+      <param name="allowFullScreen" value="true" />
+      <param name="allowScriptAccess" value="always" />
+      <param name="wmode" value="transparent">
+      <embed src="http://www.youtube.com/v/s43WGi_QZEE?autoplay=1&amp;enablejsapi=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" wmode="transparent" width="425" height="349"></embed>
+    </object>
+    </div>
+    <BLANKLINE>
+
+    If the request URL is provided with a "autoplay=1" parameter, autoplay and accessibility/usability
+    tricks are included
+
+    >>> request.QUERY_STRING = '?foo=5&autoplay=1&bar=7'
+    >>> print adapter()
+    <div class="youtubeEmbedWrapper">
+    <script type="text/javascript">
+    <!--
+    function onYouTubePlayerReady() {
+        document.getElementById('youtubeVideo').focus();
+    }
+    //-->       
+    </script>
+    <object width="425" height="349" id="youtubeVideo" tabindex="1">
+      <param name="movie" value="http://www.youtube.com/v/s43WGi_QZEE?autoplay=1&amp;enablejsapi=1" />
+      <param name="allowFullScreen" value="true" />
+      <param name="allowScriptAccess" value="always" />
+      <param name="wmode" value="transparent">
+      <embed src="http://www.youtube.com/v/s43WGi_QZEE?autoplay=1&amp;enablejsapi=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" wmode="transparent" width="425" height="349" tabindex="1"></embed>
+    </object>
+    </div>
+    <BLANKLINE>
+
     """
-    template = ViewPageTemplateFile('classic_youtubeembedcode_template.pt')
+    template = ViewPageTemplateFile('youtubeembedcode_template.pt')
 
     def getVideoLink(self):
         qs = urlparse(self.context.getRemoteUrl())[4]
@@ -91,11 +132,14 @@ class ClassicYoutubeEmbedCode(YoutubeBase, VideoEmbedCode):
             k, v = param.split('=')
             if k == 'v':
                 return self.check_autoplay('http://www.youtube.com/v/%s' % v)
-    
+
+    def getEmbedVideoLink(self):
+        """Video link, just for embedding needs"""
+        return self.getVideoLink()
+
     def get_video_id(self, parsed_remote_url):
         qs = parsed_remote_url[4]
         return dict([x.split("=") for x in qs.split("&")])['v']
-        
 
 
 class ShortYoutubeEmbedCode(YoutubeBase, VideoEmbedCode):
@@ -140,24 +184,11 @@ class ShortYoutubeEmbedCode(YoutubeBase, VideoEmbedCode):
     </div>
     <BLANKLINE>
 
-    >>> remotevideo.remoteUrl += '?AUTOPLAY=1'
-    >>> print adapter()
-    <div class="youtubeEmbedWrapper">
-    <object width="425" height="349" id="youtubeVideo">
-      <param name="movie" value="http://www.youtube.com/v/s43WGi_QZEE?autoplay=1&amp;enablejsapi=1" />
-      <param name="allowFullScreen" value="true" />
-      <param name="allowScriptAccess" value="always" />
-      <param name="wmode" value="transparent">
-      <embed src="http://www.youtube.com/v/s43WGi_QZEE?autoplay=1&amp;enablejsapi=1" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" wmode="transparent" width="425" height="349"></embed>
-    </object>
-    </div>
-    <BLANKLINE>
-
     """
-    template = ViewPageTemplateFile('short_youtubeembedcode_template.pt')
+    template = ViewPageTemplateFile('youtubeembedcode_template.pt')
 
     def getEmbedVideoLink(self):
-        """Video link, just for embedding needs"""
+        """Video link to be used for play video, so in the extended format"""
         path = urlparse(self.context.getRemoteUrl())[2]
         return self.check_autoplay('http://www.youtube.com/v%s' % path)
 
